--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             ><img
               class="header_navbar_icon_img"
               src="assets/img/navbar_icon.svg"
-              alt=""
+              alt="logo_img"
           /></a>
         </nav>
       </header>
