--- a/index.html
+++ b/index.html
@@ -62,6 +62,114 @@
           /></a>
         </nav>
       </header>
+
+      <main class="main">
+        <section class="main_banner">
+          <div class="main_banner_top">
+            <div class="main_banner_top_text">
+              <div class="main_banner_top_text_main">
+                <h2 class="main_banner_top_text_main_title">
+                  <span class="main_banner_top_text_main_title_linear"
+                    >Dive
+                  </span>
+                  Into The Depths
+                </h2>
+                <h2 class="main_banner_top_text_main_title">
+                  Of
+                  <span class="main_banner_top_text_main_title_linear">
+                    Virtual Reality</span
+                  >
+                </h2>
+              </div>
+              <p class="main_banner_top_text_paragraph">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                eiusmod tempor incididunt ut labore et dolore nisl tincidunt
+                eget. Lectus mauris eros in vitae .
+              </p>
+              <div class="main_banner_top_text_button">
+                <a class="main_banner_top_text_button_link" href="#"
+                  >BUILD YOUR WORLD</a
+                >
+                <img
+                  class="main_banner_top_text_button_img"
+                  src="assets/img/button_right.svg"
+                  alt="Button_img"
+                />
+              </div>
+            </div>
+            <img
+              class="main_banner_top_img"
+              src="assets/img/banner_img.svg"
+              alt="banner_img"
+            />
+          </div>
+          <div class="main_banner_bottom">
+            <div class="main_banner_bottom_item">
+              <a class="main_banner_bottom_icon">
+                <img src="assets/img/banner_bottom_icon_left.svg" alt="">
+              </a>
+              <img
+                class="main_banner_bottom_item_icon"
+                src="assets/img/location_icon.svg"
+                alt="Icon"
+              />
+              <div class="main_banner_bottom_item_text">
+                <h2 class="main_banner_bottom_item_text_title">
+                  Pay Us a Visit
+                </h2>
+                <p class="main_banner_bottom_item_text_paragraph">
+                  Union St, Seattle, WA 98101, United States
+                </p>
+              </div>
+              <a class="main_banner_bottom_icon">
+                <img src="assets/img/banner_bottom_icon_right.svg" alt="">
+              </a>
+            </div>
+            <div class="main_banner_bottom_item">
+              <a class="main_banner_bottom_icon">
+                <img src="assets/img/banner_bottom_icon_left.svg" alt="">
+              </a>
+              <img
+                class="main_banner_bottom_item_icon"
+                src="assets/img/phone.svg"
+                alt="Icon"
+              />
+              <div class="main_banner_bottom_item_text">
+                <h2 class="main_banner_bottom_item_text_title">
+                  Give Us a Call
+                </h2>
+                <p class="main_banner_bottom_item_text_paragraph">
+                  (110) 1111-1010
+                </p>
+              </div>
+              <a class="main_banner_bottom_icon">
+                <img src="assets/img/banner_bottom_icon_right.svg" alt="">
+              </a>
+            </div>
+            <div class="main_banner_bottom_item">
+              <a class="main_banner_bottom_icon">
+                <img src="assets/img/banner_bottom_icon_left.svg" alt="">
+              </a>
+              <img
+                class="main_banner_bottom_item_icon"
+                src="assets/img/message.svg"
+                alt="Icon"
+              />
+              <div class="main_banner_bottom_item_text">
+                <h2 class="main_banner_bottom_item_text_title">
+                  Send Us a Message
+                </h2>
+                <p class="main_banner_bottom_item_text_paragraph">
+                  Union St, Seattle, WA 98101, United States
+                </p>
+              </div>
+              <a class="main_banner_bottom_icon">
+                <img class="" src="assets/img/banner_bottom_icon_right.svg" alt="">
+              </a>
+            </div>
+          </div>
+        </section>
+      </main>
     </div>
   </body>
 </html>
