--- a/index.html
+++ b/index.html
@@ -13,164 +13,286 @@
     />
   </head>
   <body>
-    <div class="container">
-      <header class="header">
-        <nav class="header_navbar">
-          <div class="header_navbar_logo">
-            <img
-              class="header_navbar_logo_img"
-              src="assets/img/logo.svg"
-              alt="Logo_img"
-            />
-            <img
-              class="header_navbar_logo_name"
-              src="assets/img/logo_name.svg"
-              alt="Logo_name"
-            />
-          </div>
-          <ul class="header_navbar_menu">
-            <li class="header_navbar_menu_item">
-              <a class="header_navbar_menu_item_link" href="№">ABOUT</a>
-            </li>
-            <li class="header_navbar_menu_item">
-              <a class="header_navbar_menu_item_link" href="№">SERVICES</a>
-            </li>
-            <li class="header_navbar_menu_item">
-              <a class="header_navbar_menu_item_link" href="№">TECHNOLOGIES</a>
-            </li>
-            <li class="header_navbar_menu_item">
-              <a class="header_navbar_menu_item_link" href="№">HOW TO</a>
-            </li>
-          </ul>
-          <div class="header_navbar_button">
-            <a
-              class="header_navbar_button_item_link header_navbar_button_item_link_contactUs"
-              href="#"
-              >CONTACT US</a
-            >
-            <a
-              class="header_navbar_button_item_link header_navbar_button_item_link_hydra"
-              href="#"
-              >JOIN HYDRA</a
-            >
-          </div>
-          <a class="header_navbar_icon"
-            ><img
-              class="header_navbar_icon_img"
-              src="assets/img/navbar_icon.svg"
-              alt="logo_img"
-          /></a>
-        </nav>
-      </header>
+    <header class="header">
+      <nav class="header_navbar">
+        <div class="header_navbar_logo">
+          <img
+            class="header_navbar_logo_img"
+            src="assets/img/logo.svg"
+            alt="Logo_img"
+          />
+          <img
+            class="header_navbar_logo_name"
+            src="assets/img/logo_name.svg"
+            alt="Logo_name"
+          />
+        </div>
+        <ul class="header_navbar_menu">
+          <li class="header_navbar_menu_item">
+            <a class="header_navbar_menu_item_link" href="№">ABOUT</a>
+          </li>
+          <li class="header_navbar_menu_item">
+            <a class="header_navbar_menu_item_link" href="№">SERVICES</a>
+          </li>
+          <li class="header_navbar_menu_item">
+            <a class="header_navbar_menu_item_link" href="№">TECHNOLOGIES</a>
+          </li>
+          <li class="header_navbar_menu_item">
+            <a class="header_navbar_menu_item_link" href="№">HOW TO</a>
+          </li>
+        </ul>
+        <div class="header_navbar_button">
+          <a
+            class="header_navbar_button_item_link header_navbar_button_item_link_contactUs"
+            href="#"
+            >CONTACT US</a
+          >
+          <a
+            class="header_navbar_button_item_link header_navbar_button_item_link_hydra"
+            href="#"
+            >JOIN HYDRA</a
+          >
+        </div>
+        <a class="header_navbar_icon"
+          ><img
+            class="header_navbar_icon_img"
+            src="assets/img/navbar_icon.svg"
+            alt="logo_img"
+        /></a>
+      </nav>
+    </header>
 
-      <main class="main">
-        <section class="main_banner">
-          <div class="main_banner_top">
-            <div class="main_banner_top_text">
-              <div class="main_banner_top_text_main">
-                <h2 class="main_banner_top_text_main_title">
-                  <span class="main_banner_top_text_main_title_linear"
-                    >Dive
-                  </span>
-                  Into The Depths
-                </h2>
-                <h2 class="main_banner_top_text_main_title">
-                  Of
-                  <span class="main_banner_top_text_main_title_linear">
-                    Virtual Reality</span
-                  >
-                </h2>
-              </div>
-              <p class="main_banner_top_text_paragraph">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
-                eiusmod tempor incididunt ut labore et dolore nisl tincidunt
-                eget. Lectus mauris eros in vitae .
-              </p>
-              <div class="main_banner_top_text_button">
-                <a class="main_banner_top_text_button_link" href="#"
-                  >BUILD YOUR WORLD</a
+    <main class="main">
+      <section class="main_banner">
+        <div class="main_banner_top">
+          <div class="main_banner_top_text">
+            <div class="main_banner_top_text_main">
+              <h2 class="main_banner_top_text_main_title">
+                <span class="main_banner_top_text_main_title_linear"
+                  >Dive
+                </span>
+                Into The Depths
+              </h2>
+              <h2 class="main_banner_top_text_main_title">
+                Of
+                <span class="main_banner_top_text_main_title_linear">
+                  Virtual Reality</span
                 >
-                <img
-                  class="main_banner_top_text_button_img"
-                  src="assets/img/button_right.svg"
-                  alt="Button_img"
-                />
-              </div>
+              </h2>
             </div>
+            <p class="main_banner_top_text_paragraph">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore nisl tincidunt eget.
+              Lectus mauris eros in vitae .
+            </p>
+            <div class="main_banner_top_text_button">
+              <a class="main_banner_top_text_button_link" href="#"
+                >BUILD YOUR WORLD</a
+              >
+              <img
+                class="main_banner_top_text_button_img"
+                src="assets/img/button_right.svg"
+                alt="Button_img"
+              />
+            </div>
+          </div>
+          <div class="---------------------------------">
             <img
               class="main_banner_top_img"
               src="assets/img/banner_img.svg"
               alt="banner_img"
             />
           </div>
-          <div class="main_banner_bottom">
-            <div class="main_banner_bottom_item">
-              <a class="main_banner_bottom_icon">
-                <img src="assets/img/banner_bottom_icon_left.svg" alt="">
-              </a>
+        </div>
+        <div class="main_banner_bottom">
+          <div class="main_banner_bottom_item">
+            <a class="main_banner_bottom_icon">
+              <img src="assets/img/banner_bottom_icon_left.svg" alt="" />
+            </a>
+            <div class="main_banner_bottom_item_center">
               <img
-                class="main_banner_bottom_item_icon"
+                class="main_banner_bottom_item_center_icon"
                 src="assets/img/location_icon.svg"
                 alt="Icon"
               />
-              <div class="main_banner_bottom_item_text">
-                <h2 class="main_banner_bottom_item_text_title">
+              <div class="main_banner_bottom_item_center_text">
+                <h2 class="main_banner_bottom_item_center_text_title">
                   Pay Us a Visit
                 </h2>
-                <p class="main_banner_bottom_item_text_paragraph">
+                <p class="main_banner_bottom_item_center_text_paragraph">
                   Union St, Seattle, WA 98101, United States
                 </p>
               </div>
-              <a class="main_banner_bottom_icon">
-                <img src="assets/img/banner_bottom_icon_right.svg" alt="">
-              </a>
             </div>
-            <div class="main_banner_bottom_item">
-              <a class="main_banner_bottom_icon">
-                <img src="assets/img/banner_bottom_icon_left.svg" alt="">
-              </a>
+            <a class="main_banner_bottom_icon">
+              <img src="assets/img/banner_bottom_icon_right.svg" alt="" />
+            </a>
+          </div>
+          <div class="main_banner_bottom_item">
+            <a class="main_banner_bottom_icon">
+              <img src="assets/img/banner_bottom_icon_left.svg" alt="" />
+            </a>
+            <div class="main_banner_bottom_item_center">
               <img
-                class="main_banner_bottom_item_icon"
+                class="main_banner_bottom_item_center_icon"
                 src="assets/img/phone.svg"
                 alt="Icon"
               />
-              <div class="main_banner_bottom_item_text">
-                <h2 class="main_banner_bottom_item_text_title">
+              <div class="main_banner_bottom_item_center_text">
+                <h2 class="main_banner_bottom_item_center_text_title">
                   Give Us a Call
                 </h2>
-                <p class="main_banner_bottom_item_text_paragraph">
+                <p class="main_banner_bottom_item_center_text_paragraph">
                   (110) 1111-1010
                 </p>
               </div>
-              <a class="main_banner_bottom_icon">
-                <img src="assets/img/banner_bottom_icon_right.svg" alt="">
-              </a>
             </div>
-            <div class="main_banner_bottom_item">
-              <a class="main_banner_bottom_icon">
-                <img src="assets/img/banner_bottom_icon_left.svg" alt="">
-              </a>
+            <a class="main_banner_bottom_icon">
+              <img src="assets/img/banner_bottom_icon_right.svg" alt="" />
+            </a>
+          </div>
+          <div class="main_banner_bottom_item">
+            <a class="main_banner_bottom_icon">
+              <img src="assets/img/banner_bottom_icon_left.svg" alt="" />
+            </a>
+            <div class="main_banner_bottom_item_center">
               <img
-                class="main_banner_bottom_item_icon"
+                class="main_banner_bottom_item_center_icon"
                 src="assets/img/message.svg"
                 alt="Icon"
               />
-              <div class="main_banner_bottom_item_text">
-                <h2 class="main_banner_bottom_item_text_title">
+              <div class="main_banner_bottom_item_center_text">
+                <h2 class="main_banner_bottom_item_center_text_title">
                   Send Us a Message
                 </h2>
-                <p class="main_banner_bottom_item_text_paragraph">
+                <p class="main_banner_bottom_item_center_text_paragraph">
                   Union St, Seattle, WA 98101, United States
                 </p>
               </div>
-              <a class="main_banner_bottom_icon">
-                <img class="" src="assets/img/banner_bottom_icon_right.svg" alt="">
-              </a>
             </div>
+            <a class="main_banner_bottom_icon">
+              <img
+                class=""
+                src="assets/img/banner_bottom_icon_right.svg"
+                alt=""
+              />
+            </a>
           </div>
-        </section>
-      </main>
-    </div>
+        </div>
+      </section>
+
+      <section class="main_introduction_and_build">
+        <div class="main_introduction_and_build_title">
+          <h2 class="main_introduction_and_build_title_primary">INTRODUCTION</h2>
+          <div class="main_introduction_and_build_title_secondary">
+            <p class="main_introduction_and_build_title_secondary_text">TO HYDRA VR</p>
+            <img
+              class="main_section_title_icon"
+              src="assets/img/section_title_icon_right.svg"
+              alt="Icon"
+            />
+          </div>
+        </div>
+        <p class="main_introduction_and_build_text">
+          Vitae sapien pellentesque habitant morbi tristique senectus et netus
+          et. Feugiat nibh sed pulvinar proin gravida hendrerit lectus. Mi sit
+          amet mauris commodo quis imperdiet massa tincidunt nunc. Viverra
+          aliquet eget sit amet tellus. Ornare lectus sit amet est placerat in.
+          Lectus magna fringilla urna porttitor rhoncus vitae.
+        </p>
+      </section>
+
+      <section class="main_about">
+        <div class="main_about_img">
+          <img class="main_about_img_item" src="assets/img/about_img.svg" alt="image">
+        </div>
+        <div class="main_about_cards">
+          <div class="main_about_cards_top">
+            <h2 class="main_about_cards_top_title">
+              ABOUT
+            </h2>
+            <p class="main_about_cards_top_secondary">HYDRA VR</p>
+          </div>
+          <div class="main_about_cards_bottom">
+            <p class="main_about_cards_bottom_text">Eget mi proin sed libero enim sed faucibus turpis. Nisl rhoncus mattis rhoncus 
+              urna neque viverra justo. Vivamus at augue eget arcu dictum. Ultrices gravida 
+              dictum fusce ut placerat orci. Aenean et tortor at risus viverra adipiscing at in. 
+              Mattis aliquam faucibus purus in massa. Est placerat in egestas erat imperdiet 
+              sed. Consequat semper viverra nam libero justo laoreet sit amet. Aliquam 
+              etiam erat velit scelerisque in dictum non consectetur a. Laoreet sit amet 
+              cursus sit amet. Vel eros donec ac odio tempor orci dapibus. Sem nulla pha
+              retra diam sit amet nisl suscipit adipiscing bibendum. Leo a diam sollicitudi
+              n tempor.</p>
+              <button class="main_about_cards_bottom_button">LET’S GET IN TOUCH</button>
+          </div>
+        </div>
+      </section>
+
+      <section class="main_introduction_and_build">
+        <div class="main_introduction_and_build_title">
+          <h2 class="main_introduction_and_build_title_primary">WHY BUILD</h2>
+          <div class="main_introduction_and_build_title_secondary">
+            <p class="main_introduction_and_build_title_secondary_text">WITH HYDRA?</p>
+            <img
+              class="main_section_title_icon"
+              src="assets/img/section_title_icon_right.svg"
+              alt="Icon"
+            />
+          </div>
+        </div>
+        <p class="main_introduction_and_build_text">
+          Vitae sapien pellentesque habitant morbi tristique senectus et netus
+          et. Feugiat nibh sed pulvinar proin gravida hendrerit lectus. Mi sit
+          amet mauris commodo quis imperdiet massa tincidunt nunc. Viverra
+          aliquet eget sit amet tellus. Ornare lectus sit amet est placerat in.
+          Lectus magna fringilla urna porttitor rhoncus vitae.
+        </p>
+      </section>
+
+      <section class="main_cards">
+       
+        <div class="main_cards_item main_cards_item_one">
+          <div class="main_cards_icon main_cards_icon_left">
+            <img class="main_cards_icon_img" src="assets/img/cards_item_icon_left.svg" alt="icon_img">
+  
+          </div>
+          <div class="main_cards_icon main_cards_icon_right">
+            <img class="main_cards_icon_img" src="assets/img/cards_item_icon_right.svg" alt="icon_img">
+  
+          </div>
+          <img class="main_cards_item_img" src="assets/img/cards_item_1.svg" alt="img">
+          <h2 class="main_cards_item_name">SIMULATION</h2>
+          <p class="main_cards_item_text">Vitae sapien pellentesque habitant morbi
+            nunc. Viverra aliquet  porttitor rhoncus 
+            libero justo laoreet sit amet vitae.</p>
+            <button class="main_cards_item_button">TRY IT NOW</button>
+        </div>
+        <div class="main_cards_item main_cards_item_two">
+          <img class="main_cards_item_img" src="assets/img/cards_item2.svg" alt="img">
+          <h2 class="main_cards_item_name">EDUCATION</h2>
+          <p class="main_cards_item_text">Vitae sapien pellentesque habitant morbi
+            nunc. Viverra aliquet  porttitor rhoncus 
+            libero justo laoreet sit amet vitae.</p>
+            <button class="main_cards_item_button">TRY IT NOW</button>
+        </div>
+        <div class="main_cards_item main_cards_item_three">
+          <img class="main_cards_item_img" src="assets/img/cards_item_3.svg" alt="img">
+          <h2 class="main_cards_item_name">SELF-CARE</h2>
+          <p class="main_cards_item_text">Vitae sapien pellentesque habitant morbi
+            nunc. Viverra aliquet  porttitor rhoncus 
+            libero justo laoreet sit amet vitae.</p>
+            <button class="main_cards_item_button">TRY IT NOW</button>
+        </div>
+        <div class="main_cards_item main_cards_item_four">
+          <img class="main_cards_item_img" src="assets/img/cards_item_4.svg" alt="img">
+          <h2 class="main_cards_item_name">OUTDOOR</h2>
+          <p class="main_cards_item_text">Vitae sapien pellentesque habitant morbi
+            nunc. Viverra aliquet  porttitor rhoncus 
+            libero justo laoreet sit amet vitae.</p>
+            <button class="main_cards_item_button">TRY IT NOW</button>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
 `
