--- a/index.html
+++ b/index.html
@@ -183,9 +183,13 @@
 
       <section class="main_introduction_and_build">
         <div class="main_introduction_and_build_title">
-          <h2 class="main_introduction_and_build_title_primary">INTRODUCTION</h2>
+          <h2 class="main_introduction_and_build_title_primary">
+            INTRODUCTION
+          </h2>
           <div class="main_introduction_and_build_title_secondary">
-            <p class="main_introduction_and_build_title_secondary_text">TO HYDRA VR</p>
+            <p class="main_introduction_and_build_title_secondary_text">
+              TO HYDRA VR
+            </p>
             <img
               class="main_section_title_icon"
               src="assets/img/section_title_icon_right.svg"
@@ -204,26 +208,33 @@
 
       <section class="main_about">
         <div class="main_about_img">
-          <img class="main_about_img_item" src="assets/img/about_img.svg" alt="image">
+          <img
+            class="main_about_img_item"
+            src="assets/img/about_img.svg"
+            alt="image"
+          />
         </div>
         <div class="main_about_cards">
           <div class="main_about_cards_top">
-            <h2 class="main_about_cards_top_title">
-              ABOUT
-            </h2>
+            <h2 class="main_about_cards_top_title">ABOUT</h2>
             <p class="main_about_cards_top_secondary">HYDRA VR</p>
           </div>
           <div class="main_about_cards_bottom">
-            <p class="main_about_cards_bottom_text">Eget mi proin sed libero enim sed faucibus turpis. Nisl rhoncus mattis rhoncus 
-              urna neque viverra justo. Vivamus at augue eget arcu dictum. Ultrices gravida 
-              dictum fusce ut placerat orci. Aenean et tortor at risus viverra adipiscing at in. 
-              Mattis aliquam faucibus purus in massa. Est placerat in egestas erat imperdiet 
-              sed. Consequat semper viverra nam libero justo laoreet sit amet. Aliquam 
-              etiam erat velit scelerisque in dictum non consectetur a. Laoreet sit amet 
-              cursus sit amet. Vel eros donec ac odio tempor orci dapibus. Sem nulla pha
-              retra diam sit amet nisl suscipit adipiscing bibendum. Leo a diam sollicitudi
-              n tempor.</p>
-              <button class="main_about_cards_bottom_button">LET’S GET IN TOUCH</button>
+            <p class="main_about_cards_bottom_text">
+              Eget mi proin sed libero enim sed faucibus turpis. Nisl rhoncus
+              mattis rhoncus urna neque viverra justo. Vivamus at augue eget
+              arcu dictum. Ultrices gravida dictum fusce ut placerat orci.
+              Aenean et tortor at risus viverra adipiscing at in. Mattis aliquam
+              faucibus purus in massa. Est placerat in egestas erat imperdiet
+              sed. Consequat semper viverra nam libero justo laoreet sit amet.
+              Aliquam etiam erat velit scelerisque in dictum non consectetur a.
+              Laoreet sit amet cursus sit amet. Vel eros donec ac odio tempor
+              orci dapibus. Sem nulla pha retra diam sit amet nisl suscipit
+              adipiscing bibendum. Leo a diam sollicitudi n tempor.
+            </p>
+            <button class="main_about_cards_bottom_button">
+              LET’S GET IN TOUCH
+            </button>
           </div>
         </div>
       </section>
@@ -232,7 +243,9 @@
         <div class="main_introduction_and_build_title">
           <h2 class="main_introduction_and_build_title_primary">WHY BUILD</h2>
           <div class="main_introduction_and_build_title_secondary">
-            <p class="main_introduction_and_build_title_secondary_text">WITH HYDRA?</p>
+            <p class="main_introduction_and_build_title_secondary_text">
+              WITH HYDRA?
+            </p>
             <img
               class="main_section_title_icon"
               src="assets/img/section_title_icon_right.svg"
@@ -250,49 +263,207 @@
       </section>
 
       <section class="main_cards">
-       
         <div class="main_cards_item main_cards_item_one">
           <div class="main_cards_icon main_cards_icon_left">
-            <img class="main_cards_icon_img" src="assets/img/cards_item_icon_left.svg" alt="icon_img">
-  
+            <img
+              class="main_cards_icon_img"
+              src="assets/img/cards_item_icon_left.svg"
+              alt="icon_img"
+            />
           </div>
           <div class="main_cards_icon main_cards_icon_right">
-            <img class="main_cards_icon_img" src="assets/img/cards_item_icon_right.svg" alt="icon_img">
-  
+            <img
+              class="main_cards_icon_img"
+              src="assets/img/cards_item_icon_right.svg"
+              alt="icon_img"
+            />
           </div>
-          <img class="main_cards_item_img" src="assets/img/cards_item_1.svg" alt="img">
+          <img
+            class="main_cards_item_img"
+            src="assets/img/cards_item_1.svg"
+            alt="img"
+          />
           <h2 class="main_cards_item_name">SIMULATION</h2>
-          <p class="main_cards_item_text">Vitae sapien pellentesque habitant morbi
-            nunc. Viverra aliquet  porttitor rhoncus 
-            libero justo laoreet sit amet vitae.</p>
-            <button class="main_cards_item_button">TRY IT NOW</button>
+          <p class="main_cards_item_text">
+            Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet
+            porttitor rhoncus libero justo laoreet sit amet vitae.
+          </p>
+          <button class="main_cards_item_button">TRY IT NOW</button>
         </div>
         <div class="main_cards_item main_cards_item_two">
-          <img class="main_cards_item_img" src="assets/img/cards_item2.svg" alt="img">
+          <img
+            class="main_cards_item_img"
+            src="assets/img/cards_item2.svg"
+            alt="img"
+          />
           <h2 class="main_cards_item_name">EDUCATION</h2>
-          <p class="main_cards_item_text">Vitae sapien pellentesque habitant morbi
-            nunc. Viverra aliquet  porttitor rhoncus 
-            libero justo laoreet sit amet vitae.</p>
-            <button class="main_cards_item_button">TRY IT NOW</button>
+          <p class="main_cards_item_text">
+            Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet
+            porttitor rhoncus libero justo laoreet sit amet vitae.
+          </p>
+          <button class="main_cards_item_button">TRY IT NOW</button>
         </div>
         <div class="main_cards_item main_cards_item_three">
-          <img class="main_cards_item_img" src="assets/img/cards_item_3.svg" alt="img">
+          <img
+            class="main_cards_item_img"
+            src="assets/img/cards_item_3.svg"
+            alt="img"
+          />
           <h2 class="main_cards_item_name">SELF-CARE</h2>
-          <p class="main_cards_item_text">Vitae sapien pellentesque habitant morbi
-            nunc. Viverra aliquet  porttitor rhoncus 
-            libero justo laoreet sit amet vitae.</p>
-            <button class="main_cards_item_button">TRY IT NOW</button>
+          <p class="main_cards_item_text">
+            Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet
+            porttitor rhoncus libero justo laoreet sit amet vitae.
+          </p>
+          <button class="main_cards_item_button">TRY IT NOW</button>
         </div>
         <div class="main_cards_item main_cards_item_four">
-          <img class="main_cards_item_img" src="assets/img/cards_item_4.svg" alt="img">
+          <img
+            class="main_cards_item_img"
+            src="assets/img/cards_item_4.svg"
+            alt="img"
+          />
           <h2 class="main_cards_item_name">OUTDOOR</h2>
-          <p class="main_cards_item_text">Vitae sapien pellentesque habitant morbi
-            nunc. Viverra aliquet  porttitor rhoncus 
-            libero justo laoreet sit amet vitae.</p>
-            <button class="main_cards_item_button">TRY IT NOW</button>
+          <p class="main_cards_item_text">
+            Vitae sapien pellentesque habitant morbi nunc. Viverra aliquet
+            porttitor rhoncus libero justo laoreet sit amet vitae.
+          </p>
+          <button class="main_cards_item_button">TRY IT NOW</button>
+        </div>
+      </section>
+
+      <section class="main_tech">
+        <div class="main_tech_image">
+          <h2 class="main_tech_image_title">TECHNOLOGIES & HARDWARE</h2>
+          <p class="main_tech_image_name">USED BY HYDRA VR.</p>
+          <div class="main_tech_icon">
+            <i class="main_tech_icon_item fa-solid fa-chevron-down"></i>
+          </div>
+        </div>
+        <div class="main_tech_cards">
+          <div class="main_tech_cards_icon main_tech_cards_left_icon">
+            <img
+              class="main_tech_cards_icon_img"
+              src="assets/img/cards_item_icon_left.svg"
+              alt="icon_img"
+            />
+          </div>
+          <img
+            class="main_tech_cards_item_img main_tech_cards_item_one"
+            src="assets/img/tech_item_1.svg"
+            alt="Img"
+          />
+          <img
+            class="main_tech_cards_item_img main_tech_cards_item_two"
+            src="assets/img/tech_item_2.svg"
+            alt="Img"
+          />
+          <img
+            class="main_tech_cards_item_img main_tech_cards_item_three"
+            src="assets/img/tech_item_3.svg"
+            alt="Img"
+          />
+          <img
+            class="main_tech_cards_item_img main_tech_cards_item_four"
+            src="assets/img/tech_item_4.svg"
+            alt="Img"
+          />
+          <div class="main_tech_cards_icon main_tech_cards_right_icon">
+            <img
+              class="main_tech_cards_icon_img"
+              src="assets/img/cards_item_icon_right.svg"
+              alt=""
+            />
+          </div>
+        </div>
+      </section>
+
+      <section class="main_introduction_and_build">
+        <div class="main_introduction_and_build_title">
+          <h2 class="main_introduction_and_build_title_primary">
+            HOW WE BUILD
+          </h2>
+          <div class="main_introduction_and_build_title_secondary">
+            <p class="main_introduction_and_build_title_secondary_text">
+              WITH HYDRA VR?
+            </p>
+            <img
+              class="main_section_title_icon"
+              src="assets/img/section_title_icon_right.svg"
+              alt="Icon"
+            />
+          </div>
+        </div>
+        <p class="main_introduction_and_build_text">
+          Vitae sapien pellentesque habitant morbi tristique senectus et netus
+          et. Feugiat nibh sed pulvinar proin gravida hendrerit lectus. Mi sit
+          amet mauris commodo quis imperdiet massa tincidunt nunc. Viverra
+          aliquet eget sit amet tellus. Ornare lectus sit amet est placerat in.
+          Lectus magna fringilla urna porttitor rhoncus vitae.
+        </p>
+      </section>
+
+      <section class="main_circleCards">
+        <div class="main_circleCards_item main_circleCards_itemOne">
+          <div class="main_circleCards_item_top">
+            <p class="main_circleCards_item_top_number">01</p>
+          </div>
+          <div class="main_circleCards_item_bottom">
+            <div class="main_circleCards_item_bottom_icon main_circleCards_item_bottom_icon_left">
+              <i class="fa-solid fa-chevron-left"></i>
+            </div>
+            <i class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"></i>
+            <div class="main_circleCards_item_bottom_text">
+              <h2 class="main_circleCards_item_bottom_text_title">3D Conception</h2>
+              <h2 class="main_circleCards_item_bottom_text_title">& Design</h2>
+            </div>
+            <div class="main_circleCards_item_bottom_icon main_circleCards_item_bottom_icon_right">
+              <i class="fa-solid fa-chevron-right"></i>
+            </div>
+          </div>
+        </div>
+        <div class="main_circleCards_item main_circleCards_itemTwo">
+          <div class="main_circleCards_item_top">
+            <p class="main_circleCards_item_top_number">02</p>
+          </div>
+          <div class="main_circleCards_item_bottom">
+            <i class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"></i>
+            <div class="main_circleCards_item_bottom_text">
+              <h2 class="main_circleCards_item_bottom_text_title">Interaction</h2>
+              <h2 class="main_circleCards_item_bottom_text_title">Design</h2>
+            </div>
+          </div>
+        </div>
+        <div class="main_circleCards_item main_circleCards_itemThree">
+          <div class="main_circleCards_item_top">
+            <p class="main_circleCards_item_top_number">03</p>
+          </div>
+          <div class="main_circleCards_item_bottom">
+            <i class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"></i>
+            <div class="main_circleCards_item_bottom_text">
+              <h2 class="main_circleCards_item_bottom_text_title">VR World</h2>
+              <h2 class="main_circleCards_item_bottom_text_title">User Testing</h2>
+            </div>
+          </div>
+        </div>
+        <div class="main_circleCards_item main_circleCards_itemFour">
+          <div class="main_circleCards_item_top">
+            <p class="main_circleCards_item_top_number">04</p>
+          </div>
+          <div class="main_circleCards_item_bottom">
+            <i class="main_circleCards_item_bottom_right fa-solid fa-arrow-right"></i>
+            <div class="main_circleCards_item_bottom_text">
+              <h2 class="main_circleCards_item_bottom_text_title">Hydra VR</h2>
+              <h2 class="main_circleCards_item_bottom_text_title">Deploy</h2>
+            </div>
+          </div>
         </div>
       </section>
     </main>
+
+    <script
+      src="https://kit.fontawesome.com/1a5bc9c570.js"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
 `
