--- a/index.html
+++ b/index.html
@@ -458,7 +458,63 @@
           </div>
         </div>
       </section>
+
+      <section class="main_register">
+        <div class="main_register_top">
+          <h2 class="main_register_top_title">JOIN HYDRA</h2>
+          <p class="main_register_top_text">Let’s Build Your VR Experience</p>
+        </div>
+        <form class="main_register_form" action="">
+          <div class="main_register_form_main">
+            <input class="main_register_form_main_input" type="text" placeholder="Fist Name">
+            <input class="main_register_form_main_input" type="text" placeholder="Last Name">
+            <input class="main_register_form_main_input" type="email" placeholder="Email">
+            <input class="main_register_form_main_input" type="tel" placeholder="Phone Number">
+            <input class="main_register_form_main_input" type="text" placeholder="Subject">
+            <textarea  class="main_register_form_main_input main_register_form_main_input_text" placeholder="Tell Us Something..." name="" id=""></textarea>
+          </div>
+          <button class="main_register_form_button">SEND TO HYDRA</button>
+        </form>
+      </section>
     </main>
+
+    <footer class="footer">
+      <div class="footer_top">
+        <div class="footer_top_logo">
+          <img class="footer_top_logo_img" src="assets/img/logo.svg" alt="logo_img">
+        </div>
+        <ul class="footer_top_menu">
+          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">ABOUT</a></li>
+          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">SERVICES</a></li>
+          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">TECHNOLOGIES</a></li>
+          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">HOW TO</a></li>
+          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">JOIN HYDRA</a></li>
+        </ul>
+        <ul class="footer_top_menu">
+          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">F.A.Q</a></li>
+          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">SITEMAP</a></li>
+          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">CONDITIONS</a></li>
+          <li class="footer_top_menu_item"><a class="footer_top_menu_item_link" href="#">LICENSES</a></li>
+        </ul>
+        <div class="footer_top_about">
+          <p class="footer_top_about_title">SOCIALIZE WITH HYDRA</p>
+          <ul class="footer_top_about_media">
+            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-facebook"></i></li>
+            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-twitter"></i></li>
+            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-linkedin-in"></i></li>
+            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-youtube"></i></li>
+            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-instagram"></i></li>
+            <li class="footer_top_about_media_item"><i class="footer_top_about_media_item_icon fa-brands fa-pinterest"></i></li>
+          </ul>
+          <button class="footer_top_about_button">BUILD YOUR WORLD</button>
+        </div>
+      </div>
+      <div class="footer_bottom">
+        <p class="footer_bottom_text">2023 © HYDRA LANDING PAGE</p>
+        <p class="footer_bottom_text">-BY ZINE. E. FALOUTI</p>
+        <p class="footer_bottom_text">-ALL RIGHTS RESERVED</p>
+      </div>
+    </footer>
 
     <script
       src="https://kit.fontawesome.com/1a5bc9c570.js"
